# TESS-SIP

./: .flake8  LICENSE  README.md  TESS-SIP.ipynb  pyproject.toml
.github/workflows/: black.yml  flake8.yml  pytest.yml
docs/: TESS-SIP.ipynb  demo.py
src/tess_sip/: __init__.py  tess_sip.py
tests/: test_tess_sip.py
tests/data/: lcf1.fits  lcf2.fits  tpf1.fits  tpf2.fits
